syntax = "proto3";

package dhpcs.liquidity.actor.protocol.clientconnection;

option java_package = "com.dhpcs.liquidity.proto.actor.protocol.clientconnection";

import "dhpcs/liquidity/grpc-protocol.proto";

message ZoneNotificationEnvelope {
    string zone_validator = 1;
    string zone_id = 2;
    int64 sequence_number = 3;
    dhpcs.liquidity.grpc.protocol.ZoneNotification notification = 4;
}
