syntax = "proto3";

package dhpcs.liquidity.actor.protocol.liquidityserver;

option java_package = "com.dhpcs.liquidity.proto.actor.protocol.liquidityserver";

import "dhpcs/liquidity/rest-protocol.proto";

message ZoneResponseEnvelope {
    dhpcs.liquidity.rest.protocol.ZoneResponse response = 1;
}
